# workspace-docs-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/workspace_docs_mcp/: __init__.py  chunking.py  config.py  embeddings.py  hashutil.py  indexer.py  models.py  parsers.py  paths.py  retriever.py  scope.py  server.py  storage.py
tests/: test_config.py  test_embeddings.py  test_integration.py  test_parsers.py  test_scope.py
